@@ -193,20 +193,20 @@ Operational environment:        Windows XP Professionnal 2002 SP1
 -----------------------------------------------------------------------
 Compiler:                       Visual C++ 6 SP5
 -----------------------------------------------------------------------
-Date:                           2005-03-17
+Date:                           2005-03-23
 STLP Version:                   current CVS STLPORT_5_0 branch
 Reporter:                       dums (Francois Dumont)
-Status (release-shared):        All pass (318 tests)
+Status (release-shared):        All pass (317 tests)
 Notes:                          
-Status (dbg-shared):            All pass (318 tests)
+Status (dbg-shared):            All pass (317 tests)
 Notes:
-Status (stldbg-shared):         All pass (318 tests)
+Status (stldbg-shared):         All pass (317 tests)
 Notes:
-Status (release-static):        All pass (318 tests)
+Status (release-static):        All pass (317 tests)
 Notes:                          
-Status (dbg-static):            All pass (318 tests)
+Status (dbg-static):            All pass (317 tests)
 Notes:
-Status (stldbg-static):         All pass (318 tests)
+Status (stldbg-static):         All pass (317 tests)
 Notes:
 
 -----------------------------------------------------------------------
